--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - README.md
+title: Project1_Stage1
+description: Author : Chử Quang Thành
+include: README.md
+theme: jekyll-theme-cayman
 
-theme: jekyll-theme-minimal
+# Cayman theme customization
+show_downloads: false
+google_analytics:
+github:
+  is_project_page: true
+  repository_url: https://github.com/ChuQuangThanh/Project1_Stage1
