--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,8 @@ relative_links:
 include:
   - README.md
 theme: jekyll-theme-cayman
+
+readme_index:
+  enabled:          true
+  remove_originals: false
+  with_frontmatter: false
